# Localhost_Live_Cloud

./: README.md
llc_backend/: .env  .gitignore  Cargo.toml  nohup.out  pm2_logs_Tonmay-NodeApp.txt  pm2_logs_app1.txt
llc_backend/scripts/: build_redeploy.sh  ceate_lxc.sh  dependency_installer.sh  generate_public_url.sh  launch_ttyd.sh  nohup.out  pm2.sh  pm2_logs_Tonmay-NodeApp.txt  pm2_logs_app1.txt  redeploy.sh
llc_backend/src/: cloudflare_service.rs  container_service.rs  db.rs  main.rs  migrate.rs  model.rs  rabbitmq_conn.rs
llc_backend/src/handler/: cloudflared.rs  container.rs  lxc_container.rs  mod.rs  utils.rs
llc_backend/src/middleware/: auth.rs
llc_backend/src/migrations/: add_status_and_remarks.rs  container_add_status_and_remarks.rs  mod.rs
llc_frontend/: .env  eslint.config.js  index.html  package-lock.json  package.json
llc_frontend/src/: App.css  App.jsx  main.jsx
llc_frontend/src/components/: BlackHoleModel.jsx  Black_hole.jsx  ConsolePage.jsx  CreateInstancePopup.jsx  Dashboard.jsx  Deploy.jsx  Footer.jsx  HostPage.jsx  InstanceSettings.jsx  LandingPage.jsx  Logout.jsx  Payment.jsx  VirtulMatchine.jsx
llc_frontend/src/components/ui_components/: BasicChips.jsx  CopyToClipboardButton.jsx  CreateAppModal.jsx  CustomAppBar.jsx  InstanceCard.jsx  RepoList.jsx  SearchBar.jsx  SelectTech.jsx
llc_frontend/src/context/: LoadingContext.jsx
llc_frontend/src/hook/: useLoader.jsx
llc_frontend/src/style/: consle.css  console.css  dashboard.css  hostpage.css  landing_page.css  virtual_machine.css
