[package]
name = "actix_web_tuts"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"  # for environment variables
futures = "0.3"  # async operations
