[package]
name = "Localhost_live_cloud"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate"
path = "src/migrate.rs"


[[bin]]
name = "container_service"
path = "src/container_service.rs"


[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
mongodb = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"  # for environment variables
futures = "0.3"  # async operations
reqwest = { version = "0.12.7", features = ["json"] }
actix-service = "2.0"
jsonwebtoken = "9.3.0"
futures-util = "0.3"
actix-web-httpauth = "0.8.2"
alcoholic_jwt = "4091.0.0"
auth0_rs = "0.2.0"
regex = "1.11" 
actix-files = "0.6"
lapin = "2.5.0"